2017-06-23 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-736

	* 3rdparty/invlib/*: invlib update which fixes compile error
	with llvm libc++ and warnings encountered when building
	with clang++.

2017-06-22 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-735

	* src/m_cloudbox.cc (psdMH97, psdF07):
	Added parametrization-T adjustment limits as user parameters.

	* src/methods.cc (psdMH97, psdF07, psdW16):
	Adapted to changes above. Adapted/improved built-in doc.

	* src/cloudbox.cc (psd_cloudice_MH97, psd_snow_F07):
	Removed Tc<0 requirement since math is sufficiently stable also for
	positive T. Removed final isnan check (NaN cases should be avoided
	before).

2017-06-22  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-734

	* CMakeLists.txt:

	The Intel compiler has value-unsafe floating-point optimizations
	enabled by 'factory-default' which leads to large discrepancies
	compared to gcc/clang for certain calcucations (esp. Jacobians).
	To avoid these inaccuracies we now set the option '-fp-model precise'
	by default.

	* controlfiles/artscomponents/doitbatch/TestDOITBatch.arts,
	controlfiles/artscomponents/doit/TestDOITFromIndividualFields.arts:

	Revert changes from previous commit. Not needed anymore with -fp-model
	precise.

2017-06-22  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-733

	* cmake/modules/FindBLAS.cmake, cmake/modules/FindLAPACK.cmake:

	Add modules from cmake master version ded9859. Adds support for
	OpenBLAS detection without introducing a dependency for ARTS on a
	newer cmake.

	* 3rdparty/relmat/module_error.F90:

	Add missing comma in format description. Fixes compile failure with
	Intel Fortran.

	* controlfiles/artscomponents/doitbatch/TestDOITBatch.arts,
	controlfiles/artscomponents/doit/TestDOITFromIndividualFields.arts:

	Increase BT comparison tolerance from 0.01 to 0.015 to account for
	numerical differences when using the Intel compiler.

2017-06-21 Jana Mendrok  <jana.mendrok@chalmers.se>
